Implement _entities field resolution
Apply suggestions from code review

Co-authored-by: Erich Newey <enewey@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,5 +68,5 @@ jobs:
 
       - name: Run dialyzer
         run: |
-          mkdir -p priv/plts
+          mkdir -p priv/plts/{local,core}
           MIX_ENV=test mix dialyzer
