--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 absinthe_federation-*.tar
 
+.vscode
 .tool-versions*
 .DS_Store
 /priv/plts/*.plt
