--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,17 +106,10 @@ jobs:
           path: _build
           key: ${{ runner.os }}-build-${{ matrix.otp }}-${{ matrix.elixir }}-${{ hashFiles('**/mix.lock') }}
 
-      - name: Restore plt cache
-        uses: actions/cache@v2
-        with:
-          path: priv/plts
-          key: ${{ runner.os }}-build-${{ matrix.otp }}-${{ matrix.elixir }}-${{ hashFiles('**/mix.lock') }}
-
-      - name: Install deps
-        run: mix deps.get
-
       - name: Print federation compatibility schema
-        run: mix absinthe.federation.schema.sdl --schema ProductsWeb.Schema --out schema.graphql
+        run: |
+          mix deps.get
+          mix absinthe.federation.schema.sdl --schema ProductsWeb.Schema --out schema.graphql
         working-directory: ./federation_compatibility
 
       - name: Test subgraph compatibility
