--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,14 +8,19 @@ on:
     branches:
       - main
 
+permissions:
+  pull-requests: write
+
 jobs:
-  test:
-    name: Elixir ${{matrix.elixir}} / OTP ${{matrix.otp}}
+  unit_tests:
+    name: Unit tests Elixir ${{matrix.elixir}} / OTP ${{matrix.otp}}
     runs-on: ubuntu-18.04
 
     strategy:
       matrix:
         include:
+          - elixir: "1.14"
+            otp: "25"
           - elixir: "1.11"
             otp: "23"
           - elixir: "1.10"
@@ -59,6 +64,7 @@ jobs:
         run: |
           mix clean
           mix test
+
       - name: Run unit tests with persistent_term backend
         run: |
           mix clean
@@ -70,3 +76,51 @@ jobs:
         run: |
           mkdir -p priv/plts/{local,core}
           MIX_ENV=test mix dialyzer
+
+  federation_compatibility_tests:
+    name: Federation compatibility tests
+    runs-on: ubuntu-18.04
+
+    strategy:
+      matrix:
+        include:
+          - elixir: "1.14"
+            otp: "25"
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up Elixir
+        uses: erlef/setup-elixir@v1
+        with:
+          elixir-version: ${{ matrix.elixir }}
+          otp-version: ${{ matrix.otp }}
+
+      - name: Restore deps cache
+        uses: actions/cache@v2
+        with:
+          path: deps
+          key: ${{ runner.os }}-mix-${{ matrix.otp }}-${{ matrix.elixir }}-${{ hashFiles('**/mix.lock') }}
+
+      - name: Restore _build cache
+        uses: actions/cache@v2
+        with:
+          path: _build
+          key: ${{ runner.os }}-build-${{ matrix.otp }}-${{ matrix.elixir }}-${{ hashFiles('**/mix.lock') }}
+
+      - name: Print federation compatibility schema
+        run: |
+          mix deps.get
+          mix absinthe.federation.schema.sdl --schema ProductsWeb.Schema --out schema.graphql
+        working-directory: ./federation_compatibility
+
+      - name: Test subgraph compatibility
+        uses: apollographql/federation-subgraph-compatibility@v1
+        with:
+          compose: "federation_compatibility_docker_compose.yml"
+          schema: "federation_compatibility/schema.graphql"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          port: 4001
+          failOnWarning: true
+          failOnRequired: true
