Upgrade CI actions to use newer versions (#76)
* Upgrade CI actions to use newer versions

* Upgrade dialyxir to 1.2.0 and loosen the version requirement in mix.exs

* Change CI Ubuntu version to 20.04

* Run dialyzer on CI only on the latest Elixir version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ permissions:
 jobs:
   unit_tests:
     name: Unit tests Elixir ${{matrix.elixir}} / OTP ${{matrix.otp}}
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     strategy:
       matrix:
@@ -28,7 +28,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Elixir
         uses: erlef/setup-elixir@v1
@@ -37,19 +37,20 @@ jobs:
           otp-version: ${{ matrix.otp }}
 
       - name: Restore deps cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: deps
           key: ${{ runner.os }}-mix-${{ matrix.otp }}-${{ matrix.elixir }}-${{ hashFiles('**/mix.lock') }}
 
       - name: Restore _build cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: _build
           key: ${{ runner.os }}-build-${{ matrix.otp }}-${{ matrix.elixir }}-${{ hashFiles('**/mix.lock') }}
 
       - name: Restore plt cache
-        uses: actions/cache@v2
+        if: ${{ matrix.otp == '25' && matrix.elixir == '1.14' }}
+        uses: actions/cache@v3
         with:
           path: priv/plts
           key: ${{ runner.os }}-build-${{ matrix.otp }}-${{ matrix.elixir }}-${{ hashFiles('**/mix.lock') }}
@@ -73,13 +74,14 @@ jobs:
           SCHEMA_PROVIDER: persistent_term
 
       - name: Run dialyzer
+        if: ${{ matrix.otp == '25' && matrix.elixir == '1.14' }}
         run: |
           mkdir -p priv/plts/{local,core}
           MIX_ENV=test mix dialyzer
 
   federation_compatibility_tests:
     name: Federation compatibility tests
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     strategy:
       matrix:
@@ -89,7 +91,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Elixir
         uses: erlef/setup-elixir@v1
@@ -98,13 +100,13 @@ jobs:
           otp-version: ${{ matrix.otp }}
 
       - name: Restore deps cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: deps
           key: ${{ runner.os }}-mix-${{ matrix.otp }}-${{ matrix.elixir }}-${{ hashFiles('**/mix.lock') }}
 
       - name: Restore _build cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: _build
           key: ${{ runner.os }}-build-${{ matrix.otp }}-${{ matrix.elixir }}-${{ hashFiles('**/mix.lock') }}
