--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,25 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 absinthe_federation-*.tar
 
+# Federation test artifacts
+supergraph-compose.yaml
+supergraph-config.yaml
+supergraph.graphql
+results.md
+
+# Local temporary Dockerfiles
+federation_compatibility_dockerfile.local
+
+# Local text editor files
 .vscode
+
+# Local version config
+.mise.toml
 .tool-versions*
+
+# Local OS-specific files
 .DS_Store
+
+# PLT files
 /priv/plts/*.plt
 /priv/plts/*.plt.hash
